# saccade

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakeLists_TrackingOnly.txt  DEVELOPMENT.md  Dockerfile  GEMINI.md  LICENSE  README.md  README_tw.md  docker-compose.yml  flake.nix  main.py  pyproject.toml
.github/workflows/: ci.yml  cpp_build.yml  docker_build.yml  env_reproduce.yml  lint_typecheck.yml  test.yml
api/: server.py
cognition/: llm_engine.py  resource_manager.py
configs/: llm_profiles.yaml  mot17.yaml  yolo_config.yaml
docs/: DOC_MAINTENANCE.md  README.md  TODO.md  api_spec.md  architecture.md  pipeline_flow.md
docs/benchmarks/: README.md
docs/decisions/: 001-llama-cpp-backend.md  004-llama-server-http-backend.md  004-yolo26-perception.md  005-yolo26-siglip2-upgrade.md  007-cpp-migration-spec.md  008-cognition-layer-definition.md  009-industrial-zero-copy-v2.md  010-dali-gpu-preprocessing.md  011-fasttracker-reference-adaptation.md  012-fasttracker-selective-adaptation.md  013-gpubytetracker-saccade-heartbeat.md  014-agentic-rag-llama-index.md  README.md
docs/decisions/archive/: refactor_tracker.md  yolo26_siglip2_integration.md
docs/experiments/: 2026-04-18_MOT17_Optimization.md
docs/layers/: L1_perception.md  L2_vector_path.md  L3_L4_storage.md  L5_L6_cognition.md  README.md
docs/progress/: README.md  cognition.md  infra.md  media.md  optimization.md  perception.md  storage.md
docs/runbooks/: README.md  stream_recovery.md  vram_oom.md
include/media/: gst_client.hpp
include/perception/: preprocessor.hpp  trt_engine.hpp
include/saccade/: common.hpp
include/tracking/: auction.hpp  hungarian.hpp  kalman_gpu.cuh  sinkhorn.hpp  smart_tracker.hpp  tracker_gpu.hpp
infra/: mediamtx.yml
infra/systemd/: mediamtx.service  yolo-api.service  yolo-cognition.service  yolo-orchestrator.service  yolo-perception.service  yolo-vlm-backend.service
media/: dali_pipeline.py  ffmpeg_utils.py  mediamtx_client.py  rtsp_dali_pipeline.py
models/: README.md
perception/: calibrator.py  cropper.py  detector.py  detector_trt.py  dispatcher.py  drift_handler.py  embedding_dispatcher.py  entropy.py  feature_bank.py  feature_extractor.py  roi_selector.py  text_encoder.py  tracker.py  zero_copy.py
perception/tracking/: __init__.py  reorder.py  tracker.py  tracker_gpu.py
pipeline/: health.py  orchestrator.py
report_materials/: project_mandates.md  saccade_ieee_report.tex  saccade_report_zh.md
report_materials/architecture/: 005-yolo26-perception.md  006-native-trt-yolo.md
report_materials/progress/: media.md  perception.md
scripts/: benchmark_16_streams.py  bottleneck_annealer.py  build_engine.py  build_siglip_engine.py  build_yolo_engine.py  check.sh  docker_run.sh  export_jina_clip.py  export_qwen_vision.py  export_siglip.py  gpu_check.py  inspect_engine.py  inspect_yolo_engine.py  latency_breakdown.py  make_onnx_dynamic.py  nix_enter.sh  run.sh  run_8stream_perception.py  saccade  saccade_ctl.sh  setup_8_streams.sh
scripts/eval/: bench_yolo_batch.py  calculate_mota.py  convert_mot17.py  grid_search.py  grid_search_mota.py  mot17.py  mot17_l2.py  mot17_public.py  mot20.py  optimize_mota_optuna.py  optimize_tracking_multi.py  test_batch.py  ultralytics_official_mot17.py
scripts/model/: build_yolo.py  export_siglip.py  export_yoloe_embedding.py  inspect_engine.py
scripts/tools/: setup_services.sh
src/: main.cpp
src/media/: gst_client.cpp  gst_client_python.cpp
src/perception/: perception_python.cpp  preprocessor.cpp  preprocessor_gpu.cu  trt_engine.cpp
src/tracking/: smart_tracker.cu  tracker_gpu.cu  tracker_gpu_python.cpp
storage/: chroma_store.py  redis_cache.py
tests/: test_cognition.py  test_core.py  test_e2e.py  test_media.py  test_parallel_reid.py  test_pipeline.py  test_storage.py  test_zero_copy.py
tests/benchmarks/: README.md  bench_core_transport.py  bench_db_quality.py  bench_drift_handler.py  bench_e2e_extreme.py  bench_full_stress.py  bench_gst_throughput.py  bench_model_comparison.py  bench_mot20_real.py  bench_mot20_stress.py  bench_multistream.py  bench_multistream_8.py  bench_perception_pipeline.py  bench_siglip_parallel.py  bench_storage_vector.py  bench_stress_extreme.py  bench_suite.py  bench_trt_extreme.py  bench_vlm_latency.py  bench_vram_stability.py  bench_zero_copy.py  run_all.sh
tests/benchmarks/archive/: bench_db_quality.py  bench_detailed_jitter.py  bench_e2e_latency.py  bench_full_stress.py  bench_native_trt_sync.py  bench_nextgen_stack.py  bench_trt_extreme.py  bench_vram_stability.py  bench_yolo_comparison.py  bench_zero_copy.py
