[project]
name = "saccade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics",
    "numpy",
    "opencv-python",
    "tensorrt",
    "llama-cpp-python",
    "chromadb",
    "redis",
    "torch",
    "torchvision",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ruff",
    "pytest",
    "httpx",
    "nvidia-ml-py",
    "lap>=0.5.13",
    "mypy>=1.20.0",
    "pynvml>=13.0.1",
    "pyyaml>=6.0.3",
    "anyio>=4.13.0",
    "pytest-asyncio>=1.3.0",
    "pytest-anyio>=0.0.0",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
