[project]
name = "saccade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics",
    "numpy",
    "opencv-python",
    "tensorrt",
    "llama-cpp-python",
    "chromadb",
    "redis",
    "torch",
    "torchvision",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "ruff",
    "pytest",
    "httpx",
    "nvidia-ml-py",
    "lap>=0.5.13",
    "mypy>=1.20.0",
    "pyyaml>=6.0.3",
    "anyio>=4.13.0",
    "pytest-asyncio>=1.3.0",
    "pytest-anyio>=0.0.0",
    "types-pyyaml>=6.0.12.20260408",
    "decord>=0.6.0",
    "nvidia-dali-cuda120>=2.0.0",
    "pygobject>=3.56.2",
    "timm>=1.0.26",
    "onnxscript>=0.6.2",
    "transformers>=5.5.3",
    "accelerate>=1.13.0",
    "optimum>=2.1.0",
    "einops>=0.8.2",
    "onnxruntime-gpu>=1.24.4",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
